--- a/src/codinglist.html
+++ b/src/codinglist.html
@@ -232,14 +232,14 @@ a:hover {text-decoration:underline;}
 					<td class="no"></td>
 					<td class="link"><a href="policy_01_way_nodata.html?open" target="_blank">SUB_01정책제도분석_01차로조회_결과없음</a></td>
 					<td class="td_url"></td>
-					<td class="work"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
 					<td class="link"><a href="policy_01_way.html?open" target="_blank">SUB_01정책제도분석_01차로조회_click</a></td>
 					<td class="td_url"></td>
-					<td class="work"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
@@ -270,14 +270,14 @@ a:hover {text-decoration:underline;}
 					<td class="no"></td>
 					<td class="link"><a href="policy_02_nodata.html?open" target="_blank">SUB_01정책제도분석_02모빌리티_결과없음</a></td>
 					<td class="td_url"></td>
-					<td class="work"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
 					<td class="link"><a href="policy_02_graph.html?open" target="_blank">SUB_01정책제도분석_02모빌리티_graph</a></td>
 					<td class="td_url"></td>
-					<td class="work"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr class="depth">
