--- a/src/policy_01_way_nodata.html
+++ b/src/policy_01_way_nodata.html
@@ -6,7 +6,7 @@
 		@@include('./include/_header.html')
 		<section class="map_render_wrap">
 			<div class="map_render_left_layer">
-				<a href="#" class="btn_box_obj ico_loadmap"><span class="btn_box_obj_text">자율차 서비스 차로</span></a>
+				<a href="#" class="btn_box_obj has_ico ico_loadmap"><span class="btn_box_obj_text">자율차 서비스 차로</span></a>
 			</div>
 			<div class="map_render_right_layer">
 				<ul class="map_zoom_item_list">
@@ -18,7 +18,7 @@
 				<!-- style='개발 확인 및 전달용입니다' -->
 				<a href="#" style="display:inline-block;position:absolute;top:300px;left:500px;"><img src="./assets/images/ic_check_road@2x.png" style="max-width:40px;" alt=""></a>
 				<a href="#" style="display:inline-block;position:absolute;top:300px;left:900px;"><img src="./assets/images/ic_marker_road@2x.png" style="max-width:24px;" alt=""></a>
-				<div class="map_summary_box">
+				<div class="map_summary_box" style="position:absolute;top:112px;left:403px;">
 					<div class="map_summary_row">
 						<ul class="map_summary_tail_list">
 							<li>
@@ -34,7 +34,7 @@
 					<div class="map_summary_row">
 						<p class="map_summary_para">경기도 성남시 수정구 수진2동<br>고속도로(4차로) 수도권제1순환고속도로</p>
 						<div class="map_summary_control_wrap">
-							<a href="#" class="btn_box medium primary">상세정보</a>
+							<a href="#" class="btn_map_summarybox">상세정보</a>
 						</div>
 					</div>
 				</div>
@@ -43,7 +43,7 @@
 		<div class="map_bottom_wrap">
 			<div class="map_fold_row">
 				<div class="map_fold_control_row"><a href="javascript:;" class="btn_map_fold_control active"><span class="hdtext">열기/닫기</span></span></a></div>
-				<div class="map_fold_content_row" style="display:block;">
+				<div class="map_fold_content_row">
 					<div class="map_fold_content">
 						<div class="map_fold_title_row">
 							<div class="map_fold_title_cols">
@@ -52,11 +52,11 @@
 							<div class="map_fold_title_cols">
 								<dl class="map_caption_dl">
 									<dt><span class="map_caption_label">도로 ID</span></dt>
-									<dd><span clas="map_caption_value">8133610</span></dd>
+									<dd><span class="map_caption_value">8133610</span></dd>
 								</dl>
 							</div>
 						</div>	
-						<div class="map_fold_content_row">
+						<div class="map_fold_data_render_row">
 							<div class="chart_title_flex_wrap">
 								<div class="chart_title_flex_cols"><p class="chart_map_title">평균/제한 속도(km/h)</p></div>
 								<div class="chart_title_flex_cols"><p class="chart_map_title">혼재율/혼재량 변화 이력</p></div>
@@ -88,10 +88,10 @@
 								<div class="map_control_comp_thcols"><span class="map_clabel_fxwrap ico_date"><span class="map_clabel_fxtext">날짜선택</span></span></div>
 								<div class="map_control_comp_tdcols">
 									<div class="tui-datepicker-input tui-datetime-input tui-has-focus" value="2023-07-19">
-										<input type="text" id="datepicker-input" aria-label="Date-Time">
+										<input type="text" id="datepicker-input" aria-label="Date-Time" class="input_tui_calendar">
 										<span class="tui-ico-date"></span>
 									</div>
-									<div id="map_date_render" class="ui_picker_render"></div>
+									<div id="map_date_render" class="ui_picker_render reverse_render"></div>
 								</div>
 							</div>
 						</li>
@@ -101,11 +101,53 @@
 								<div class="map_control_comp_tdcols">
 									<ul class="hor_form_list">
 										<li>
-											<div id="timepicker-selectbox" class="time_picker_item"></div>
+											<div class="combo_item reverse_item" id="select_combo_start">
+												<a href="javascript:;" class="combo_target">00:00</a>
+												<div class="combo_option_group reverse_pos">
+													<div class="combo_option_scroll" data-rowCount="10">
+														<ul class="combo_option_list">
+															<li><a href="javascript:;" data-value="option_0" class="combo_option">00:00</a></li>
+															<li><a href="javascript:;" data-value="option_1" class="combo_option">01:00</a></li>
+															<li><a href="javascript:;" data-value="option_2" class="combo_option">02:00</a></li>
+															<li><a href="javascript:;" data-value="option_3" class="combo_option">03:00</a></li>
+															<li><a href="javascript:;" data-value="option_4" class="combo_option">04:00</a></li>
+															<li><a href="javascript:;" data-value="option_5" class="combo_option">05:00</a></li>
+															<li><a href="javascript:;" data-value="option_6" class="combo_option">06:00</a></li>
+															<li><a href="javascript:;" data-value="option_7" class="combo_option">07:00</a></li>
+															<li><a href="javascript:;" data-value="option_8" class="combo_option">08:00</a></li>
+															<li><a href="javascript:;" data-value="option_9" class="combo_option">09:00</a></li>
+															<li><a href="javascript:;" data-value="option_10" class="combo_option">10:00</a></li>
+															<li><a href="javascript:;" data-value="option_11" class="combo_option">11:00</a></li>
+															<li><a href="javascript:;" data-value="option_12" class="combo_option">12:00</a></li>
+														</ul>
+													</div>
+												</div>
+											</div>
 										</li>
 										<li class="short"><span class="short_else">~</span></li>
 										<li>
-											<div id="timepicker-selectbox2" class="time_picker_item"></div>
+											<div class="combo_item reverse_item" id="select_combo_end">
+												<a href="javascript:;" class="combo_target">11:00</a>
+												<div class="combo_option_group reverse_pos">
+													<div class="combo_option_scroll" data-rowCount="10">
+														<ul class="combo_option_list">
+															<li><a href="javascript:;" data-value="option_0" class="combo_option">00:00</a></li>
+															<li><a href="javascript:;" data-value="option_1" class="combo_option">01:00</a></li>
+															<li><a href="javascript:;" data-value="option_2" class="combo_option">02:00</a></li>
+															<li><a href="javascript:;" data-value="option_3" class="combo_option">03:00</a></li>
+															<li><a href="javascript:;" data-value="option_4" class="combo_option">04:00</a></li>
+															<li><a href="javascript:;" data-value="option_5" class="combo_option">05:00</a></li>
+															<li><a href="javascript:;" data-value="option_6" class="combo_option">06:00</a></li>
+															<li><a href="javascript:;" data-value="option_7" class="combo_option">07:00</a></li>
+															<li><a href="javascript:;" data-value="option_8" class="combo_option">08:00</a></li>
+															<li><a href="javascript:;" data-value="option_9" class="combo_option">09:00</a></li>
+															<li><a href="javascript:;" data-value="option_10" class="combo_option">10:00</a></li>
+															<li><a href="javascript:;" data-value="option_11" class="combo_option">11:00</a></li>
+															<li><a href="javascript:;" data-value="option_12" class="combo_option">12:00</a></li>
+														</ul>
+													</div>
+												</div>
+											</div>
 										</li>
 									</ul>
 								</div>
@@ -119,12 +161,39 @@
 		<script>
 			menuRock("#one_depth_01");
 
+			//combo callback
+			comboChangeCallback({
+				target: "select_combo_start",
+				callback(value) {
+					console.log(value);
+				}
+			});
+			comboChangeCallback({
+				target: "select_combo_end",
+				callback(value) {
+					console.log(value);
+				}
+			});
+
+
+			var datepicker = new tui.DatePicker('#map_date_render', {
+				date: new Date(),
+				language: 'ko',
+				input: {
+					element: '#datepicker-input',
+					format: 'yyyy-MM-dd'
+				}
+			});
+
 			// 퍼블확인용
-			let url = window.location.href.split('?')[1];
-			let url_2 = url !== undefined ? url.split('#')[0] : null;
-			if(url_2 === "loading"){
-				document.querySelector(".loading_layer").classList.add("active");
-			}
+			window.addEventListener("load",()=>{
+				let url = window.location.href.split('?')[1];
+				let url_2 = url !== undefined ? url.split('#')[0] : null;
+				if(url_2 === "open"){
+					let event = new Event("click");
+					document.querySelector(".btn_map_fold_control").dispatchEvent(event);
+				}
+			});
 		</script>
 	</div>
 </body>
