스킨3진행중

--- a/src/forecast_02.html
+++ b/src/forecast_02.html
@@ -3,7 +3,7 @@
 @@include('./include/_head.html')
 <body class="front_body map_api_body">
 	<div class="page_wrap">
-		@@include('./include/_header.html')
+		@@include('./include/_header_front.html')
 		<section class="map_screen_wrap">
 			<div class="map_screen_title_row">
 				<div class="map_screen_title_main_cols">
