--- a/src/policy_01_way.html
+++ b/src/policy_01_way.html
@@ -3,7 +3,7 @@
 @@include('./include/_head.html')
 <body class="front_body map_api_body">
 	<div class="page_wrap">
-		@@include('./include/_header.html')
+		@@include('./include/_header_front.html')
 		<section class="map_render_wrap">
 			<div class="map_render_left_layer">
 				<a href="#" class="btn_box_obj has_ico ico_loadmap"><span class="btn_box_obj_text">자율차 서비스 차로</span></a>
