--- a/src/layout3.html
+++ b/src/layout3.html
@@ -3,7 +3,7 @@
 @@include('./include/_head.html')
 <body class="front_body map_api_body">
 	<div class="page_wrap">
-		@@include('./include/_header.html')
+		@@include('./include/_header_front.html')
 		<section class="map_screen_wrap">
 			<div class="map_screen_title_row">
 				<div class="map_screen_title_main_cols">
@@ -25,6 +25,8 @@
 			</div>
 		</section>
 		<script>
+			menuRock("#one_depth_02");
+
 			// 퍼블확인용
 			let url = window.location.href.split('?')[1];
 			let url_2 = url !== undefined ? url.split('#')[0] : null;
