--- a/src/policy_02_nodata.html
+++ b/src/policy_02_nodata.html
@@ -3,7 +3,7 @@
 @@include('./include/_head.html')
 <body class="front_body map_api_body">
 	<div class="page_wrap">
-		@@include('./include/_header.html')
+		@@include('./include/_header_front.html')
 		<section class="map_render_wrap">
 			<div class="map_render_left_layer">
 				<div class="map_guide_toggle_group">
