--- a/src/layout3.html
+++ b/src/layout3.html
@@ -14,14 +14,14 @@
 				</div>
 				<div class="map_screen_title_sub_cols">
 					<ul class="btn_map_screen_list">
-						<li><a href="#" class="btn_quad ico_car"><span class="btn_quad_text">시뮬레이션 실행</span></a></li>
+						<li><a href="#" class="btn_quad has_ico ico_car"><span class="btn_quad_text">시뮬레이션 실행</span></a></li>
 					</ul>
 				</div>
 			</div>
-			<div class="map_screen_content_row">
-				<div style="display:flex;align-items:center;justify-content:center;width:100%;height:100%;background:#d9d9d9;box-sizing:border-box;color:#5f637a;padding:20px;">
-					그라파나 표출 영역
-				</div>
+			<div class="map_screen_content_row full_render_zone">
+				<!-- api -->
+				<p style="color:#5f637a;background:#d9d9d9;position:absolute;top:0;left:0;width:100%;height:100%;display:flex;align-items: center;justify-content: center;">그라파나 표출 영역</p>
+				<!-- // api -->
 			</div>
 		</section>
 		<script>
