--- a/src/policy_01_way_nodata.html
+++ b/src/policy_01_way_nodata.html
@@ -87,8 +87,8 @@
 							<div class="map_control_comp_item">
 								<div class="map_control_comp_thcols"><span class="map_clabel_fxwrap ico_date"><span class="map_clabel_fxtext">날짜선택</span></span></div>
 								<div class="map_control_comp_tdcols">
-									<div class="tui-datepicker-input tui-datetime-input tui-has-focus" value="2023-07-19">
-										<input type="text" id="datepicker-input" aria-label="Date-Time" class="input_tui_calendar">
+									<div class="tui-datepicker-input" value="2023-07-19">
+										<input type="text" id="datepicker-input" class="input_tui_calendar">
 										<span class="tui-ico-date"></span>
 									</div>
 									<div id="map_date_render" class="ui_picker_render reverse_render"></div>
