--- a/src/admin_user_data.html
+++ b/src/admin_user_data.html
@@ -12,13 +12,320 @@
 			</div>
 			<div class="map_screen_content_row screen_content_both">
 				<div class="screen_content_main_cols">
-					내용이 들어갑니다.
+					<!-- search -->
+					<div class="search_field_container">
+						<div class="search_field_row">
+							<div class="search_field_cols">
+								<div class="combo_item medium" id="filter_combo">
+									<a href="javascript:;" class="combo_target">전체</a>
+									<div class="combo_option_group medium">
+										<div class="combo_option_scroll" data-rowCount="3">
+											<ul class="combo_option_list">
+												<li><a href="javascript:;" data-value="option_0" class="combo_option">옵션 01</a></li>
+												<li><a href="javascript:;" data-value="option_1" class="combo_option">옵션 02</a></li>
+												<li><a href="javascript:;" data-value="option_2" class="combo_option">옵션 03</a></li>
+												<li><a href="javascript:;" data-value="option_3" class="combo_option">옵션 04</a></li>
+												<li><a href="javascript:;" data-value="option_4" class="combo_option">옵션 05</a></li>
+												<li><a href="javascript:;" data-value="option_5" class="combo_option">옵션 06</a></li>
+												<li><a href="javascript:;" data-value="option_6" class="combo_option">옵션 07</a></li>
+												<li><a href="javascript:;" data-value="option_7" class="combo_option">옵션 08</a></li>
+												<li><a href="javascript:;" data-value="option_8" class="combo_option">옵션 09</a></li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="search_field_cols long_type">
+								<div class="search_field_wrap" name="search_form" data-rowCount="3">
+									<div class="input_component_box search_field" data-name="value_check">
+										<input type="text" class="input_origin_item" placeholder="검색어 입력">
+										<button type="button" class="btn_form_reset"><span class="hdtext">리셋</span></button>
+									</div>
+									<!-- layer -->
+									<div class="auto_word_layer">
+										<div class="auto_word_list_wrap">
+											<ul class="auto_word_list">
+												<li><a href="javascript:;" class="auto_word_item">자동완성옵션 01</a></li>
+												<li><a href="javascript:;" class="auto_word_item">자동완성옵션 02</a></li>
+												<li><a href="javascript:;" class="auto_word_item">자동완성옵션 03</a></li>
+												<li><a href="javascript:;" class="auto_word_item">자동완성옵션 04</a></li>
+												<li><a href="javascript:;" class="auto_word_item">자동완성옵션 05</a></li>
+											</ul>
+										</div>
+									</div>
+									<!-- // layer -->
+								</div>
+							</div>
+							<div class="search_field_cols">
+								<a href="#" class="btn_field_formbox">
+									<i class="ico_field_formbox ico_search"></i>
+									<span class="btn_field_formbox_text">검색</span>
+								</a>
+							</div>
+							<div class="search_field_cols">
+								<a href="#" class="btn_field_formbox primary">
+									<i class="ico_field_formbox ico_write"></i>
+									<span class="btn_field_formbox_text">등록</span>
+								</a>
+							</div>
+						</div>
+					</div>
+					<!-- // search -->
+					<!-- list_table_render_wrap -->
+					<div class="list_table_render_wrap">
+						<div class="list_sort_row">
+							<div class="list_sort_cols">
+								<span class="list_count_wrap">
+									<span class="list_count_current">999</span>
+									<span class="list_count_length">건</span>
+								</span>
+								<ul class="list_sortcase_item_list">
+									<li>
+										<div class="combo_item" id="sort_type01">
+											<a href="javascript:;" class="combo_target">수정일자</a>
+											<div class="combo_option_group">
+												<div class="combo_option_scroll" data-rowCount="3">
+													<ul class="combo_option_list">
+														<li><a href="javascript:;" data-value="option_0" class="combo_option">2023.00.00</a></li>
+														<li><a href="javascript:;" data-value="option_1" class="combo_option">2023.00.00</a></li>
+														<li><a href="javascript:;" data-value="option_2" class="combo_option">2023.00.00</a></li>
+														<li><a href="javascript:;" data-value="option_3" class="combo_option">2023.00.00</a></li>
+														<li><a href="javascript:;" data-value="option_4" class="combo_option">2023.00.00</a></li>
+													</ul>
+												</div>
+											</div>
+										</div>
+									</li>
+									<li>
+										<div class="combo_item" id="sort_type02">
+											<a href="javascript:;" class="combo_target">내림차순</a>
+											<div class="combo_option_group">
+												<div class="combo_option_scroll" data-rowCount="3">
+													<ul class="combo_option_list">
+														<li><a href="javascript:;" data-value="option_0" class="combo_option">올림차순</a></li>
+														<li><a href="javascript:;" data-value="option_1" class="combo_option">내림차순</a></li>
+													</ul>
+												</div>
+											</div>
+										</div>
+									</li>
+								</ul>
+							</div>
+							<div class="list_sort_cols">
+								<!-- Pagination -->
+								<div class="pagination_wrap">
+									<a href="javascript:;" class="btn_pagination_control prev_go disabled"><span class="hdtext">이전</span></a>
+									<ul class="pagination_number_list">
+										<li><a href="#" class="page_number active">1</a></li>
+										<li><a href="#" class="page_number">2</a></li>
+										<li><a href="#" class="page_number">3</a></li>
+										<li><a href="#" class="page_number">4</a></li>
+										<li><a href="#" class="page_number">5</a></li>
+										<li><a href="#" class="page_number">6</a></li>
+										<li><a href="#" class="page_number">7</a></li>
+										<li><a href="#" class="page_number">8</a></li>
+										<li><a href="#" class="page_number">9</a></li>
+										<li><a href="#" class="page_number">10</a></li>
+									</ul>
+									<a href="javascript:;" class="btn_pagination_control next_go"><span class="hdtext">다음</span></a>
+								</div>
+								<!-- // Pagination -->
+							</div>
+						</div>
+						<div class="list_table_row">
+							<table class="list_table">
+								<thead>
+									<tr>
+										<th scope="col"><span class="thtext">아이디</span></th>
+										<th scope="col"><span class="thtext">이메일</span></th>
+										<th scope="col"><span class="thtext">소속</span></th>
+										<th scope="col"><span class="thtext">권한</span></th>
+									</tr>
+								</thead>
+								<tbody>
+									<!-- <tr>
+										<td colspan="4" class="nodata_td">
+											<div class="nodata_para_wrap">
+												<p class="nodata_para">조회 결과가 없습니다.</p>
+											</div>
+										</td>
+									</tr> -->
+									<tr>
+										<td><span class="tdtext">User1</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">엠큐닉</span></td>
+										<td><span class="tdtext">사용자</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">User1</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">엠큐닉</span></td>
+										<td><span class="tdtext">사용자</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">User1</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">엠큐닉</span></td>
+										<td><span class="tdtext">사용자</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">User1</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">엠큐닉</span></td>
+										<td><span class="tdtext">사용자</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">User1</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">엠큐닉</span></td>
+										<td><span class="tdtext">사용자</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">User1</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">엠큐닉</span></td>
+										<td><span class="tdtext">사용자</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">User1</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">엠큐닉</span></td>
+										<td><span class="tdtext">사용자</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">User1</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">엠큐닉</span></td>
+										<td><span class="tdtext">사용자</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">User1</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">엠큐닉</span></td>
+										<td><span class="tdtext">사용자</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">User1</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">엠큐닉</span></td>
+										<td><span class="tdtext">사용자</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">User1</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">엠큐닉</span></td>
+										<td><span class="tdtext">사용자</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">User1</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">엠큐닉</span></td>
+										<td><span class="tdtext">사용자</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">User1</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">엠큐닉</span></td>
+										<td><span class="tdtext">사용자</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">User1</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">엠큐닉</span></td>
+										<td><span class="tdtext">사용자</span></td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>
+					<!-- // list_table_render_wrap -->
 				</div>
 				<div class="screen_content_sub_cols">
-					내용이 들어갑니다.
+					<div class="screen_subtitle_row">
+						<h3 class="screen_subtitle">사용자 등록</h3>
+						<div class="screen_subelse_wrap">
+							<a href="#" class="btn_controlbox">
+								<i class="ico_controlbox ico_modify"></i>
+								<span class="btn_controlbox_text">수정</span>
+							</a>
+							<a href="#" class="btn_controlbox">
+								<i class="ico_controlbox ico_del"></i>
+								<span class="btn_controlbox_text">삭제</span>
+							</a>
+						</div>
+					</div>
+					<div class="user_ui_wrap type2">
+						<div class="user_ui_header">
+							<div class="user_ui_header_img"><img src="./assets/images/userinfo@2x.png" alt=""></div>
+							<div class="user_ui_header_spec_group">
+								<div class="user_spec_main">user id sample</div>
+								<div class="user_spec_sub"><span class="ing_box_user">김사용자</span></div>
+							</div>
+						</div>
+						<div class="user_ui_databox">
+							<ul class="getdata_view_list">
+								<li>
+									<div class="getdata_view_item">
+										<i class="getdata_view_ico ico_mail"></i>
+										<div class="getdata_view_spec_group type2">
+											<p class="gv_spec_key">이메일</p>
+											<p class="gv_spec_value">abc@abc.com</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class="getdata_view_item">
+										<i class="getdata_view_ico ico_call"></i>
+										<div class="getdata_view_spec_group">
+											<p class="gv_spec_key">전화번호</p>
+											<p class="gv_spec_value">01012341234</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class="getdata_view_item">
+										<i class="getdata_view_ico ico_com"></i>
+										<div class="getdata_view_spec_group">
+											<p class="gv_spec_key">소속</p>
+											<p class="gv_spec_value">엠큐닉</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class="getdata_view_item">
+										<i class="getdata_view_ico ico_right"></i>
+										<div class="getdata_view_spec_group">
+											<p class="gv_spec_key">권한</p>
+											<p class="gv_spec_value">사용자</p>
+										</div>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
 	</div>
+	<script>
+		comboChangeCallback({
+			target: "filter_combo",
+			callback(value) {
+				console.log(value);
+			}
+		});
+		comboChangeCallback({
+			target: "sort_type01",
+			callback(value) {
+				console.log(value);
+			}
+		});
+		comboChangeCallback({
+			target: "sort_type02",
+			callback(value) {
+				console.log(value);
+			}
+		});
+	</script>
 </body>
 </html>
