--- a/src/admin_user_write.html
+++ b/src/admin_user_write.html
@@ -12,10 +12,275 @@
 			</div>
 			<div class="map_screen_content_row screen_content_both">
 				<div class="screen_content_main_cols">
-					내용이 들어갑니다.
+					<!-- search -->
+					<div class="search_field_container">
+						<div class="search_field_row">
+							<div class="search_field_cols">
+								<div class="combo_item medium" id="filter_combo">
+									<a href="javascript:;" class="combo_target">전체</a>
+									<div class="combo_option_group medium">
+										<div class="combo_option_scroll" data-rowCount="3">
+											<ul class="combo_option_list">
+												<li><a href="javascript:;" data-value="option_0" class="combo_option">옵션 01</a></li>
+												<li><a href="javascript:;" data-value="option_1" class="combo_option">옵션 02</a></li>
+												<li><a href="javascript:;" data-value="option_2" class="combo_option">옵션 03</a></li>
+												<li><a href="javascript:;" data-value="option_3" class="combo_option">옵션 04</a></li>
+												<li><a href="javascript:;" data-value="option_4" class="combo_option">옵션 05</a></li>
+												<li><a href="javascript:;" data-value="option_5" class="combo_option">옵션 06</a></li>
+												<li><a href="javascript:;" data-value="option_6" class="combo_option">옵션 07</a></li>
+												<li><a href="javascript:;" data-value="option_7" class="combo_option">옵션 08</a></li>
+												<li><a href="javascript:;" data-value="option_8" class="combo_option">옵션 09</a></li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="search_field_cols long_type">
+								<div class="search_field_wrap" name="search_form" data-rowCount="3">
+									<div class="input_component_box search_field" data-name="value_check">
+										<input type="text" class="input_origin_item" placeholder="검색어 입력">
+										<button type="button" class="btn_form_reset"><span class="hdtext">리셋</span></button>
+									</div>
+									<!-- layer -->
+									<div class="auto_word_layer">
+										<div class="auto_word_list_wrap">
+											<ul class="auto_word_list">
+												<li><a href="javascript:;" class="auto_word_item">자동완성옵션 01</a></li>
+												<li><a href="javascript:;" class="auto_word_item">자동완성옵션 02</a></li>
+												<li><a href="javascript:;" class="auto_word_item">자동완성옵션 03</a></li>
+												<li><a href="javascript:;" class="auto_word_item">자동완성옵션 04</a></li>
+												<li><a href="javascript:;" class="auto_word_item">자동완성옵션 05</a></li>
+											</ul>
+										</div>
+									</div>
+									<!-- // layer -->
+								</div>
+							</div>
+							<div class="search_field_cols">
+								<a href="#" class="btn_field_formbox">
+									<i class="ico_field_formbox ico_search"></i>
+									<span class="btn_field_formbox_text">검색</span>
+								</a>
+							</div>
+							<div class="search_field_cols">
+								<a href="#" class="btn_field_formbox primary">
+									<i class="ico_field_formbox ico_write"></i>
+									<span class="btn_field_formbox_text">등록</span>
+								</a>
+							</div>
+						</div>
+					</div>
+					<!-- // search -->
+					<!-- list_table_render_wrap -->
+					<div class="list_table_render_wrap">
+						<div class="list_sort_row">
+							<div class="list_sort_cols">
+								<span class="list_count_wrap">
+									<span class="list_count_current">999</span>
+									<span class="list_count_length">건</span>
+								</span>
+								<ul class="list_sortcase_item_list">
+									<li>
+										<div class="combo_item" id="sort_type01">
+											<a href="javascript:;" class="combo_target">수정일자</a>
+											<div class="combo_option_group">
+												<div class="combo_option_scroll" data-rowCount="3">
+													<ul class="combo_option_list">
+														<li><a href="javascript:;" data-value="option_0" class="combo_option">2023.00.00</a></li>
+														<li><a href="javascript:;" data-value="option_1" class="combo_option">2023.00.00</a></li>
+														<li><a href="javascript:;" data-value="option_2" class="combo_option">2023.00.00</a></li>
+														<li><a href="javascript:;" data-value="option_3" class="combo_option">2023.00.00</a></li>
+														<li><a href="javascript:;" data-value="option_4" class="combo_option">2023.00.00</a></li>
+													</ul>
+												</div>
+											</div>
+										</div>
+									</li>
+									<li>
+										<div class="combo_item" id="sort_type02">
+											<a href="javascript:;" class="combo_target">내림차순</a>
+											<div class="combo_option_group">
+												<div class="combo_option_scroll" data-rowCount="3">
+													<ul class="combo_option_list">
+														<li><a href="javascript:;" data-value="option_0" class="combo_option">올림차순</a></li>
+														<li><a href="javascript:;" data-value="option_1" class="combo_option">내림차순</a></li>
+													</ul>
+												</div>
+											</div>
+										</div>
+									</li>
+								</ul>
+							</div>
+							<div class="list_sort_cols">
+								<!-- Pagination -->
+								<div class="pagination_wrap">
+									<a href="javascript:;" class="btn_pagination_control prev_go disabled"><span class="hdtext">이전</span></a>
+									<ul class="pagination_number_list">
+										<li><a href="#" class="page_number active">1</a></li>
+										<li><a href="#" class="page_number">2</a></li>
+										<li><a href="#" class="page_number">3</a></li>
+										<li><a href="#" class="page_number">4</a></li>
+										<li><a href="#" class="page_number">5</a></li>
+										<li><a href="#" class="page_number">6</a></li>
+										<li><a href="#" class="page_number">7</a></li>
+										<li><a href="#" class="page_number">8</a></li>
+										<li><a href="#" class="page_number">9</a></li>
+										<li><a href="#" class="page_number">10</a></li>
+									</ul>
+									<a href="javascript:;" class="btn_pagination_control next_go"><span class="hdtext">다음</span></a>
+								</div>
+								<!-- // Pagination -->
+							</div>
+						</div>
+						<div class="list_table_row">
+							<table class="list_table">
+								<thead>
+									<tr>
+										<th scope="col"><span class="thtext">아이디</span></th>
+										<th scope="col"><span class="thtext">이메일</span></th>
+										<th scope="col"><span class="thtext">소속</span></th>
+										<th scope="col"><span class="thtext">권한</span></th>
+									</tr>
+								</thead>
+								<tbody>
+									<!-- <tr>
+										<td colspan="4" class="nodata_td">
+											<div class="nodata_para_wrap">
+												<p class="nodata_para">조회 결과가 없습니다.</p>
+											</div>
+										</td>
+									</tr> -->
+									<tr>
+										<td><span class="tdtext">uc_0000020</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">소속 데이터</span></td>
+										<td><span class="tdtext">최고 관리</span></td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>
+					<!-- // list_table_render_wrap -->
 				</div>
 				<div class="screen_content_sub_cols">
-					내용이 들어갑니다.
+					<div class="screen_subtitle_row">
+						<h3 class="screen_subtitle">사용자 등록</h3>
+					</div>
+					<div class="screen_subcontent_row">
+						<ul class="subcontent_form_tb">
+							<li>
+								<div class="subc_form_th_cols"><span class="subc_form_label imp">아이디</span></div>
+								<div class="subc_form_td_cols">
+									<div class="input_component_box skin2">
+										<input type="text" class="input_origin_item" placeholder="4~8자/ 국문, 영문, 숫자">
+										<span class="count_wrap">
+											<span class="count_text">0/0</span>
+										</span>
+										<button class="btn_form_reset"><span class="hdtext">리셋</span></button>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="subc_form_th_cols"><span class="subc_form_label imp">이메일</span></div>
+								<div class="subc_form_td_cols">
+									<div class="input_component_box skin2">
+										<input type="text" class="input_origin_item" placeholder="ex) abc@abc.com">
+										<span class="count_wrap">
+											<span class="count_text">0/0</span>
+										</span>
+										<button class="btn_form_reset"><span class="hdtext">리셋</span></button>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="subc_form_th_cols"><span class="subc_form_label imp">이름</span></div>
+								<div class="subc_form_td_cols">
+									<div class="input_component_box skin2">
+										<input type="text" class="input_origin_item" placeholder="2~16자 / 국문, 영문">
+										<span class="count_wrap">
+											<span class="count_text">0/0</span>
+										</span>
+										<button class="btn_form_reset"><span class="hdtext">리셋</span></button>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="subc_form_th_cols"><span class="subc_form_label imp">전화번호</span></div>
+								<div class="subc_form_td_cols">
+									<div class="input_component_box skin2">
+										<input type="text" class="input_origin_item" placeholder="9~11자 / ‘-’없이 입력">
+										<span class="count_wrap">
+											<span class="count_text">0/0</span>
+										</span>
+										<button class="btn_form_reset"><span class="hdtext">리셋</span></button>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="subc_form_th_cols"><span class="subc_form_label imp">소속</span></div>
+								<div class="subc_form_td_cols">
+									<div class="input_component_box skin2">
+										<input type="text" class="input_origin_item" placeholder="소속업체명">
+										<span class="count_wrap">
+											<span class="count_text">0/0</span>
+										</span>
+										<button class="btn_form_reset"><span class="hdtext">리셋</span></button>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="subc_form_th_cols"><span class="subc_form_label imp">비밀번호</span></div>
+								<div class="subc_form_td_cols">
+									<div class="td_blockitem">
+										<div class="input_component_box skin2">
+											<input type="password" class="input_origin_item" placeholder="8~16자 / 영문+숫자+특수기호 조합">
+											<span class="count_wrap">
+												<span class="count_text">0/0</span>
+											</span>
+											<button class="btn_form_reset"><span class="hdtext">리셋</span></button>
+										</div>
+									</div>
+									<div class="td_blockitem">
+										<div class="input_component_box skin2">
+											<input type="password" class="input_origin_item" placeholder="비밀번호 확인">
+											<span class="count_wrap">
+												<span class="count_text">0/0</span>
+											</span>
+											<button class="btn_form_reset"><span class="hdtext">리셋</span></button>
+										</div>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="subc_form_th_cols"><span class="subc_form_label imp">권한</span></div>
+								<div class="subc_form_td_cols">
+									<ul class="props_form_item_list">
+										<li>
+											<div class="props_form_item">
+												<input type="radio" name="power" class="props_form" id="power_01" checked>
+												<label for="power_01" class="props_label">사용자</label>
+											</div>
+										</li>
+										<li>
+											<div class="props_form_item">
+												<input type="radio" name="power" class="props_form" id="power_02">
+												<label for="power_02" class="props_label">관리자</label>
+											</div>
+										</li>
+									</ul>
+								</div>
+							</li>
+						</ul>
+					</div>
+					<div class="scroll_subfooter_row">
+						<a href="#" class="btn_field_formbox cloudy">
+							<span class="btn_field_formbox_text">취소</span>
+						</a>
+						<a href="#" class="btn_field_formbox primary">
+							<i class="ico_field_formbox ico_check"></i>
+							<span class="btn_field_formbox_text">저장</span>
+						</a>
+					</div>
 				</div>
 			</div>
 		</section>
