--- a/src/codinglist.html
+++ b/src/codinglist.html
@@ -119,13 +119,13 @@ a:hover {text-decoration:underline;}
 					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
-				<!-- <tr>
+				<tr>
 					<td class="no"></td>
 					<td class="link"><a href="modal.html" target="_blank">modal 샘플</a></td>
 					<td class="td_url"></td>
-					<td class="work ing"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
-				</tr> -->
+				</tr>
 				<tr>
 					<td class="no"></td>
 					<td class="link"><a href="dialogue.html" target="_blank">dialogue 샘플</a></td>
