--- a/src/forecast_03_nodata.html
+++ b/src/forecast_03_nodata.html
@@ -20,7 +20,187 @@
 			</div>
 			<div class="map_screen_content_row screen_content_both">
 				<div class="screen_content_main_cols">
-					내용이 들어갑니다.
+					<!-- search -->
+					<div class="search_field_container">
+						<div class="search_field_row">
+							<div class="search_field_cols">
+								<a href="#" class="btn_field_box">
+									<i class="ico_field ico_filter"></i>
+									<span class="field_box_text">필터</span>
+								</a>
+							</div>
+							<div class="search_field_cols">
+								<div class="combo_item medium" id="filter_combo">
+									<a href="javascript:;" class="combo_target">전체</a>
+									<div class="combo_option_group medium">
+										<div class="combo_option_scroll" data-rowCount="3">
+											<ul class="combo_option_list">
+												<li><a href="javascript:;" data-value="option_0" class="combo_option">옵션 01</a></li>
+												<li><a href="javascript:;" data-value="option_1" class="combo_option">옵션 02</a></li>
+												<li><a href="javascript:;" data-value="option_2" class="combo_option">옵션 03</a></li>
+												<li><a href="javascript:;" data-value="option_3" class="combo_option">옵션 04</a></li>
+												<li><a href="javascript:;" data-value="option_4" class="combo_option">옵션 05</a></li>
+												<li><a href="javascript:;" data-value="option_5" class="combo_option">옵션 06</a></li>
+												<li><a href="javascript:;" data-value="option_6" class="combo_option">옵션 07</a></li>
+												<li><a href="javascript:;" data-value="option_7" class="combo_option">옵션 08</a></li>
+												<li><a href="javascript:;" data-value="option_8" class="combo_option">옵션 09</a></li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="search_field_cols long_type">
+								<div class="search_field_wrap" name="search_form" data-rowCount="3">
+									<div class="input_component_box search_field" data-name="value_check">
+										<input type="text" class="input_origin_item" placeholder="검색어 입력">
+										<button type="button" class="btn_form_reset"><span class="hdtext">리셋</span></button>
+									</div>
+									<!-- layer -->
+									<div class="auto_word_layer">
+										<div class="auto_word_list_wrap">
+											<ul class="auto_word_list">
+												<li><a href="javascript:;" class="auto_word_item">자동완성옵션 01</a></li>
+												<li><a href="javascript:;" class="auto_word_item">자동완성옵션 02</a></li>
+												<li><a href="javascript:;" class="auto_word_item">자동완성옵션 03</a></li>
+												<li><a href="javascript:;" class="auto_word_item">자동완성옵션 04</a></li>
+												<li><a href="javascript:;" class="auto_word_item">자동완성옵션 05</a></li>
+											</ul>
+										</div>
+									</div>
+									<!-- // layer -->
+								</div>
+							</div>
+							<div class="search_field_cols">
+								<a href="#" class="btn_field_formbox">
+									<i class="ico_field_formbox ico_search"></i>
+									<span class="btn_field_formbox_text">검색</span>
+								</a>
+							</div>
+							<div class="search_field_cols">
+								<a href="#" class="btn_field_formbox primary">
+									<i class="ico_field_formbox ico_write"></i>
+									<span class="btn_field_formbox_text">등록</span>
+								</a>
+							</div>
+						</div>
+					</div>
+					<!-- // search -->
+					<!-- filter -->
+					@@include('./include/_filter.html', { 
+						toggleText : "카테고리 선택"
+					}))
+					<!-- // filter -->
+					<!-- listdata_render_wrap -->
+					<div class="listdata_render_wrap">
+						<div class="listdata_render_data_cols">
+							<p class="ico_copy_parag"><span class="ico_copy_intext">병합을 원하는 Use-case를 선택해주세요.</span></p>
+							<!-- <ul class="getdata_box_list">
+								<li><a href="javascript:;" class="getdata_box"><span class="getdata_box_text">uc_000001900000190000019000001900000190000019000001900000190000019000001900000190000019000001900000190000019</span><i class="getdata_box_close"></i></a></li>
+								<li><a href="javascript:;" class="getdata_box"><span class="getdata_box_text">uc_000001800000180000018</span><i class="getdata_box_close"></i></a></li>
+								<li><a href="javascript:;" class="getdata_box"><span class="getdata_box_text">uc_0000017</span><i class="getdata_box_close"></i></a></li>
+							</ul> -->
+						</div>
+						<div class="listdata_render_control_cols">
+							<ul class="btn_listdata_control_list">
+								<li><a href="#" class="btn_onlytext">전체해제</a></li>
+								<li>
+									<a href="#" class="btn_field_formbox small">
+										<span class="btn_field_formbox_text">병합</span>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<!-- // listdata_render_wrap -->
+					<!-- list_table_render_wrap -->
+					<div class="list_table_render_wrap">
+						<div class="list_sort_row">
+							<div class="list_sort_cols">
+								<span class="list_count_wrap">
+									<span class="list_count_current">999</span>
+									<span class="list_count_length">건</span>
+								</span>
+								<ul class="list_sortcase_item_list">
+									<li>
+										<div class="combo_item" id="sort_type01">
+											<a href="javascript:;" class="combo_target">수정일자</a>
+											<div class="combo_option_group">
+												<div class="combo_option_scroll" data-rowCount="3">
+													<ul class="combo_option_list">
+														<li><a href="javascript:;" data-value="option_0" class="combo_option">2023.00.00</a></li>
+														<li><a href="javascript:;" data-value="option_1" class="combo_option">2023.00.00</a></li>
+														<li><a href="javascript:;" data-value="option_2" class="combo_option">2023.00.00</a></li>
+														<li><a href="javascript:;" data-value="option_3" class="combo_option">2023.00.00</a></li>
+														<li><a href="javascript:;" data-value="option_4" class="combo_option">2023.00.00</a></li>
+													</ul>
+												</div>
+											</div>
+										</div>
+									</li>
+									<li>
+										<div class="combo_item" id="sort_type02">
+											<a href="javascript:;" class="combo_target">내림차순</a>
+											<div class="combo_option_group">
+												<div class="combo_option_scroll" data-rowCount="3">
+													<ul class="combo_option_list">
+														<li><a href="javascript:;" data-value="option_0" class="combo_option">올림차순</a></li>
+														<li><a href="javascript:;" data-value="option_1" class="combo_option">내림차순</a></li>
+													</ul>
+												</div>
+											</div>
+										</div>
+									</li>
+								</ul>
+							</div>
+							<div class="list_sort_cols">
+								<!-- Pagination -->
+								<div class="pagination_wrap">
+									<a href="javascript:;" class="btn_pagination_control prev_go disabled"><span class="hdtext">이전</span></a>
+									<ul class="pagination_number_list">
+										<li><a href="#" class="page_number active">1</a></li>
+										<li><a href="#" class="page_number">2</a></li>
+										<li><a href="#" class="page_number">3</a></li>
+										<li><a href="#" class="page_number">4</a></li>
+										<li><a href="#" class="page_number">5</a></li>
+										<li><a href="#" class="page_number">6</a></li>
+										<li><a href="#" class="page_number">7</a></li>
+										<li><a href="#" class="page_number">8</a></li>
+										<li><a href="#" class="page_number">9</a></li>
+										<li><a href="#" class="page_number">10</a></li>
+									</ul>
+									<a href="javascript:;" class="btn_pagination_control next_go"><span class="hdtext">다음</span></a>
+								</div>
+								<!-- // Pagination -->
+							</div>
+						</div>
+						<div class="list_table_row primary">
+							<table class="list_table">
+								<thead>
+									<tr>
+										<th scope="col" class="has_check"></th>
+										<th scope="col"><span class="thtext">번호</span></th>
+										<th scope="col"><span class="thtext">ID</span></th>
+										<th scope="col"><span class="thtext">명칭</span></th>
+										<th scope="col"><span class="thtext">Type</span></th>
+										<th scope="col"><span class="thtext">Simulation ID</span></th>
+										<th scope="col"><span class="thtext">Simulation 명칭</span></th>
+										<th scope="col"><span class="thtext">수정 일자</span></th>
+										<th scope="col"><span class="thtext">생성자</span></th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td class="nodata_td" colspan="9">
+											<div class="nodata_para_wrap">
+												<p class="nodata_para">조회 결과가 없습니다.</p>
+											</div>
+										</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>
+					<!-- // list_table_render_wrap -->
 				</div>
 				<div class="screen_content_sub_cols">
 					<div class="screen_guide_wrap">
@@ -32,6 +212,49 @@
 		</section>
 		<script>
 			menuRock("#one_depth_03");
+
+			
+  			searchForm();
+
+			var datepicker_start = new tui.DatePicker('#form_date_start_render', {
+				date: new Date(),
+				language: 'ko',
+				input: {
+					element: '#datepicker-startinput',
+					format: 'yyyy-MM-dd HH:mm A'
+				},
+				timePicker: true
+			});
+		
+			var datepicker_end = new tui.DatePicker('#form_date_end_render', {
+				date: new Date(),
+				language: 'ko',
+				input: {
+					element: '#datepicker-endinput',
+					format: 'yyyy-MM-dd HH:mm A'
+				},
+				timePicker: true
+			});
+
+
+			comboChangeCallback({
+				target: "filter_combo",
+				callback(value) {
+					console.log(value);
+				}
+			});
+			comboChangeCallback({
+				target: "sort_type01",
+				callback(value) {
+					console.log(value);
+				}
+			});
+			comboChangeCallback({
+				target: "sort_type02",
+				callback(value) {
+					console.log(value);
+				}
+			});
 
 			// 퍼블확인용
 			let url = window.location.href.split('?')[1];
