--- a/src/admin_user_write.html
+++ b/src/admin_user_write.html
@@ -19,7 +19,7 @@
 								<div class="combo_item medium" id="filter_combo">
 									<a href="javascript:;" class="combo_target">전체</a>
 									<div class="combo_option_group medium">
-										<div class="combo_option_scroll" data-rowCount="3">
+										<div class="combo_option_scroll" data-rowCount="5">
 											<ul class="combo_option_list">
 												<li><a href="javascript:;" data-value="option_0" class="combo_option">옵션 01</a></li>
 												<li><a href="javascript:;" data-value="option_1" class="combo_option">옵션 02</a></li>
@@ -36,7 +36,7 @@
 								</div>
 							</div>
 							<div class="search_field_cols long_type">
-								<div class="search_field_wrap" name="search_form" data-rowCount="3">
+								<div class="search_field_wrap" name="search_form" data-rowCount="5">
 									<div class="input_component_box search_field" data-name="value_check">
 										<input type="text" class="input_origin_item" placeholder="검색어 입력">
 										<button type="button" class="btn_form_reset"><span class="hdtext">리셋</span></button>
@@ -84,13 +84,13 @@
 										<div class="combo_item" id="sort_type01">
 											<a href="javascript:;" class="combo_target">수정일자</a>
 											<div class="combo_option_group">
-												<div class="combo_option_scroll" data-rowCount="3">
+												<div class="combo_option_scroll" data-rowCount="5">
 													<ul class="combo_option_list">
-														<li><a href="javascript:;" data-value="option_0" class="combo_option">2023.00.00</a></li>
-														<li><a href="javascript:;" data-value="option_1" class="combo_option">2023.00.00</a></li>
-														<li><a href="javascript:;" data-value="option_2" class="combo_option">2023.00.00</a></li>
-														<li><a href="javascript:;" data-value="option_3" class="combo_option">2023.00.00</a></li>
-														<li><a href="javascript:;" data-value="option_4" class="combo_option">2023.00.00</a></li>
+														<li><a href="javascript:;" data-value="option_0" class="combo_option">ID</a></li>
+														<li><a href="javascript:;" data-value="option_1" class="combo_option">명칭</a></li>
+														<li><a href="javascript:;" data-value="option_2" class="combo_option">Type</a></li>
+														<li><a href="javascript:;" data-value="option_3" class="combo_option">수정 일자</a></li>
+														<li><a href="javascript:;" data-value="option_4" class="combo_option">생성자</a></li>
 													</ul>
 												</div>
 											</div>
@@ -100,7 +100,7 @@
 										<div class="combo_item" id="sort_type02">
 											<a href="javascript:;" class="combo_target">내림차순</a>
 											<div class="combo_option_group">
-												<div class="combo_option_scroll" data-rowCount="3">
+												<div class="combo_option_scroll" data-rowCount="5">
 													<ul class="combo_option_list">
 														<li><a href="javascript:;" data-value="option_0" class="combo_option">올림차순</a></li>
 														<li><a href="javascript:;" data-value="option_1" class="combo_option">내림차순</a></li>
