--- a/src/codinglist.html
+++ b/src/codinglist.html
@@ -333,7 +333,7 @@ a:hover {text-decoration:underline;}
 					<td class="no"></td>
 					<td class="link"><a href="forecast_03.html" target="_blank">SUB_03혼재기교통상황예측_03Use-case</a></td>
 					<td class="td_url"></td>
-					<td class="work ing"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
@@ -378,7 +378,7 @@ a:hover {text-decoration:underline;}
 					<td class="no"></td>
 					<td class="link"><a href="forecast_04_sim.html" target="_blank">SUB_03혼재기교통상황예측_04Simulation</a></td>
 					<td class="td_url"></td>
-					<td class="work ing"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
@@ -399,14 +399,14 @@ a:hover {text-decoration:underline;}
 					<td class="no"></td>
 					<td class="link"><a href="forecast_04_sim_detail.html?mapping_popup" target="_blank">[팝업]SUB_03혼재기교통상황예측_04Simulation_매핑</a></td>
 					<td class="td_url"></td>
-					<td class="work ing"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
 					<td class="link"><a href="forecast_04_sim_detail.html?mapping_popup_nodata" target="_blank">[팝업]SUB_03혼재기교통상황예측_04Simulation_매핑_결과없음</a></td>
 					<td class="td_url"></td>
-					<td class="work ing"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr class="depth">
@@ -433,7 +433,7 @@ a:hover {text-decoration:underline;}
 					<td class="no"></td>
 					<td class="link"><a href="admin_layout.html" target="_blank">SUB_Admin layout</a></td>
 					<td class="td_url"></td>
-					<td class="work ing"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
