--- a/src/admin_user_write.html
+++ b/src/admin_user_write.html
@@ -134,6 +134,12 @@
 						</div>
 						<div class="list_table_row">
 							<table class="list_table">
+								<colgroup>
+									<col style="width:25%" />
+									<col style="width:25%" />
+									<col style="width:25%" />
+									<col />
+								</colgroup>
 								<thead>
 									<tr>
 										<th scope="col"><span class="thtext">아이디</span></th>
@@ -156,6 +162,60 @@
 										<td><span class="tdtext">소속 데이터</span></td>
 										<td><span class="tdtext">최고 관리</span></td>
 									</tr>
+									<tr>
+										<td><span class="tdtext">uc_0000020</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">소속 데이터</span></td>
+										<td><span class="tdtext">최고 관리</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">uc_0000020</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">소속 데이터</span></td>
+										<td><span class="tdtext">최고 관리</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">uc_0000020</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">소속 데이터</span></td>
+										<td><span class="tdtext">최고 관리</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">uc_0000020</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">소속 데이터</span></td>
+										<td><span class="tdtext">최고 관리</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">uc_0000020</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">소속 데이터</span></td>
+										<td><span class="tdtext">최고 관리</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">uc_0000020</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">소속 데이터</span></td>
+										<td><span class="tdtext">최고 관리</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">uc_0000020</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">소속 데이터</span></td>
+										<td><span class="tdtext">최고 관리</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">uc_0000020</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">소속 데이터</span></td>
+										<td><span class="tdtext">최고 관리</span></td>
+									</tr>
+									<tr>
+										<td><span class="tdtext">uc_0000020</span></td>
+										<td><span class="tdtext">test@naver.com</span></td>
+										<td><span class="tdtext">소속 데이터</span></td>
+										<td><span class="tdtext">최고 관리</span></td>
+									</tr>
 								</tbody>
 							</table>
 						</div>
@@ -171,7 +231,7 @@
 							<li>
 								<div class="subc_form_th_cols"><span class="subc_form_label imp">아이디</span></div>
 								<div class="subc_form_td_cols">
-									<div class="input_component_box skin2">
+									<div class="input_component_box small">
 										<input type="text" class="input_origin_item" placeholder="4~8자/ 국문, 영문, 숫자">
 										<span class="count_wrap">
 											<span class="count_text">0/0</span>
@@ -183,7 +243,7 @@
 							<li>
 								<div class="subc_form_th_cols"><span class="subc_form_label imp">이메일</span></div>
 								<div class="subc_form_td_cols">
-									<div class="input_component_box skin2">
+									<div class="input_component_box small">
 										<input type="text" class="input_origin_item" placeholder="ex) abc@abc.com">
 										<span class="count_wrap">
 											<span class="count_text">0/0</span>
@@ -195,7 +255,7 @@
 							<li>
 								<div class="subc_form_th_cols"><span class="subc_form_label imp">이름</span></div>
 								<div class="subc_form_td_cols">
-									<div class="input_component_box skin2">
+									<div class="input_component_box small">
 										<input type="text" class="input_origin_item" placeholder="2~16자 / 국문, 영문">
 										<span class="count_wrap">
 											<span class="count_text">0/0</span>
@@ -207,7 +267,7 @@
 							<li>
 								<div class="subc_form_th_cols"><span class="subc_form_label imp">전화번호</span></div>
 								<div class="subc_form_td_cols">
-									<div class="input_component_box skin2">
+									<div class="input_component_box small">
 										<input type="text" class="input_origin_item" placeholder="9~11자 / ‘-’없이 입력">
 										<span class="count_wrap">
 											<span class="count_text">0/0</span>
@@ -219,7 +279,7 @@
 							<li>
 								<div class="subc_form_th_cols"><span class="subc_form_label imp">소속</span></div>
 								<div class="subc_form_td_cols">
-									<div class="input_component_box skin2">
+									<div class="input_component_box small">
 										<input type="text" class="input_origin_item" placeholder="소속업체명">
 										<span class="count_wrap">
 											<span class="count_text">0/0</span>
@@ -232,7 +292,7 @@
 								<div class="subc_form_th_cols"><span class="subc_form_label imp">비밀번호</span></div>
 								<div class="subc_form_td_cols">
 									<div class="td_blockitem">
-										<div class="input_component_box skin2">
+										<div class="input_component_box small">
 											<input type="password" class="input_origin_item" placeholder="8~16자 / 영문+숫자+특수기호 조합">
 											<span class="count_wrap">
 												<span class="count_text">0/0</span>
@@ -241,7 +301,7 @@
 										</div>
 									</div>
 									<div class="td_blockitem">
-										<div class="input_component_box skin2">
+										<div class="input_component_box small">
 											<input type="password" class="input_origin_item" placeholder="비밀번호 확인">
 											<span class="count_wrap">
 												<span class="count_text">0/0</span>
@@ -272,11 +332,11 @@
 							</li>
 						</ul>
 					</div>
-					<div class="scroll_subfooter_row">
-						<a href="#" class="btn_field_formbox cloudy">
+					<div class="field_footer_row">
+						<a href="#" class="btn_field_formbox cloudy big">
 							<span class="btn_field_formbox_text">취소</span>
 						</a>
-						<a href="#" class="btn_field_formbox primary">
+						<a href="#" class="btn_field_formbox primary big">
 							<i class="ico_field_formbox ico_check"></i>
 							<span class="btn_field_formbox_text">저장</span>
 						</a>
@@ -284,6 +344,10 @@
 				</div>
 			</div>
 		</section>
+
+		<script>
+  			searchForm();
+		</script>
 	</div>
 </body>
 </html>
