--- a/src/codinglist.html
+++ b/src/codinglist.html
@@ -347,7 +347,7 @@ a:hover {text-decoration:underline;}
 					<td class="no"></td>
 					<td class="link"><a href="forecast_03_write_normal.html" target="_blank">SUB_03혼재기교통상황예측_03Use-case_등록_일반적상황</a></td>
 					<td class="td_url"></td>
-					<td class="work ing"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
@@ -416,14 +416,14 @@ a:hover {text-decoration:underline;}
 					<td class="no"></td>
 					<td class="link"><a href="layout.html?user" target="_blank">[팝업]SUB_04사용자정보_view</a></td>
 					<td class="td_url"></td>
-					<td class="work ing"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
 					<td class="link"><a href="layout.html?user_modify" target="_blank">[팝업]SUB_04사용자정보_수정</a></td>
 					<td class="td_url"></td>
-					<td class="work ing"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr class="depth">
@@ -440,21 +440,21 @@ a:hover {text-decoration:underline;}
 					<td class="no"></td>
 					<td class="link"><a href="admin_user_write.html" target="_blank">SUB_Admin_사용자등록</a></td>
 					<td class="td_url"></td>
-					<td class="work ing"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
 					<td class="link"><a href="admin_user_data.html" target="_blank">SUB_Admin_사용자정보</a></td>
 					<td class="td_url"></td>
-					<td class="work ing"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
 					<td class="link"><a href="admin_user_modify.html" target="_blank">SUB_Admin_사용자수정</a></td>
 					<td class="td_url"></td>
-					<td class="work ing"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 			</tbody>
