--- a/src/forecast_03_write_event.html
+++ b/src/forecast_03_write_event.html
@@ -88,7 +88,7 @@
 					<!-- filter -->
 					@@include('./include/_filter.html', { 
 						toggleText : "기하구조적 특징/특징 A/10, 기하구조적 특징/특징 A/20, 교통류 특징"
-					}))
+					})
 					<!-- // filter -->
 					<!-- listdata_render_wrap -->
 					<div class="listdata_render_wrap">
@@ -437,10 +437,10 @@
 								<div class="subc_form_content_row">
 									<!--  -->
 									<div class="subc_form_item">
-										<div class="subc_form_title_row">
+										<div class="subc_form_item_title_row">
 											<p class="subc_form_title">공사/사고</p>
 										</div>
-										<div class="subc_form_content_row">
+										<div class="subc_form_item_content_row">
 											<table class="subc_form_tb">
 												<tr>
 													<th><span class="subc_form_label">항목</span></th>
@@ -526,7 +526,7 @@
 								<div class="subc_form_title_row">
 									<span class="subc_form_label">설명</span>
 								</div>
-								<div class="subc_form_content_row">
+								<div class="subc_form_content_row type2">
 									<div class="form_textarea_box">
 										<textarea rows="10" cols="10" class="form_textarea" placeholder="설명 입력"></textarea>
 										<span class="count_wrap">
@@ -537,7 +537,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="scroll_subfooter_row">
+					<div class="field_footer_row">
 						<a href="#" class="btn_field_formbox cloudy">
 							<span class="btn_field_formbox_text">취소</span>
 						</a>
