--- a/src/forecast_03_modify.html
+++ b/src/forecast_03_modify.html
@@ -424,10 +424,10 @@
 								<div class="subc_form_content_row">
 									<!--  -->
 									<div class="subc_form_item">
-										<div class="subc_form_title_row">
+										<div class="subc_form_item_title_row">
 											<p class="subc_form_title">기하구조적 특징</p>
 										</div>
-										<div class="subc_form_content_row">
+										<div class="subc_form_item_content_row">
 											<table class="subc_form_tb">
 												<tr>
 													<th><span class="subc_form_label">항목</span></th>
@@ -509,10 +509,10 @@
 									<!-- // -->
 									<!--  -->
 									<div class="subc_form_item">
-										<div class="subc_form_title_row">
+										<div class="subc_form_item_title_row">
 											<p class="subc_form_title">교통류 특징</p>
 										</div>
-										<div class="subc_form_content_row">
+										<div class="subc_form_item_content_row">
 											<table class="subc_form_tb">
 												<tr>
 													<th><span class="subc_form_label">항목</span></th>
@@ -594,10 +594,10 @@
 									<!-- // -->
 									<!--  -->
 									<div class="subc_form_item">
-										<div class="subc_form_title_row">
+										<div class="subc_form_item_title_row">
 											<p class="subc_form_title">자동차 혼재율</p>
 										</div>
-										<div class="subc_form_content_row">
+										<div class="subc_form_item_content_row">
 											<table class="subc_form_tb">
 												<tr>
 													<th><span class="subc_form_label">항목</span></th>
@@ -683,7 +683,7 @@
 								<div class="subc_form_title_row">
 									<span class="subc_form_label">설명</span>
 								</div>
-								<div class="subc_form_content_row">
+								<div class="subc_form_content_row type2">
 									<div class="form_textarea_box">
 										<textarea rows="10" cols="10" class="form_textarea" placeholder="설명 입력">해당 Use-case는 ~~</textarea>
 										<span class="count_wrap">
@@ -694,7 +694,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="scroll_subfooter_row">
+					<div class="field_footer_row">
 						<a href="#" class="btn_field_formbox cloudy">
 							<span class="btn_field_formbox_text">취소</span>
 						</a>
