헤더 버그 수정

--- a/src/forecast_03_write_normal.html
+++ b/src/forecast_03_write_normal.html
@@ -441,6 +441,11 @@
 										</div>
 										<div class="subc_form_item_content_row">
 											<table class="subc_form_tb">
+												<colgroup>
+													<col style="width:30px" />
+													<col />
+													<col style="width:40px" />
+												</colgroup>
 												<tr>
 													<th><span class="subc_form_label">항목</span></th>
 													<td>
@@ -461,7 +466,7 @@
 													</td>
 													<th><span class="subc_form_label">입력값</span></th>
 													<td>
-														<div class="combo_item">
+														<div class="combo_item" style="display:block">
 															<a href="javascript:;" class="combo_target">입력값 선택</a>
 															<div class="combo_option_group">
 																<div class="combo_option_scroll" data-rowCount="5">
